[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameBoard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="GameBoard" parent="." instance=ExtResource( 2 )]

[node name="Player2" parent="." instance=ExtResource( 1 )]
player = 1

[node name="Player1" parent="." instance=ExtResource( 1 )]

[node name="GameCam" type="Camera2D" parent="."]
current = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
margin_right = 109.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveButton" type="Button" parent="HUD/HBoxContainer"]
margin_right = 47.0
margin_bottom = 40.0
text = "Move"

[node name="EndTurn" type="Button" parent="HUD/HBoxContainer"]
visible = false
margin_left = 51.0
margin_right = 63.0
margin_bottom = 40.0
text = "End"

[node name="PlayerLabel" type="Label" parent="HUD/HBoxContainer"]
margin_left = 51.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="HUD/HBoxContainer"]
margin_left = 55.0
margin_top = 13.0
margin_right = 105.0
margin_bottom = 27.0
text = "Space #"

[node name="SpaceLabel" type="Label" parent="HUD/HBoxContainer"]
margin_left = 109.0
margin_top = 13.0
margin_right = 109.0
margin_bottom = 27.0

[node name="TurnSwitch" type="ColorRect" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxLayout" type="VBoxContainer" parent="HUD/TurnSwitch"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/TurnSwitch/BoxLayout"]
margin_right = 81.0
margin_bottom = 14.0
text = "Player X turn"

[node name="SwitchTurnBtn" type="Button" parent="HUD/TurnSwitch/BoxLayout"]
margin_top = 18.0
margin_right = 81.0
margin_bottom = 38.0
text = "OK"
[connection signal="pressed" from="HUD/HBoxContainer/MoveButton" to="." method="_on_MoveButton_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="pressed" from="HUD/TurnSwitch/BoxLayout/SwitchTurnBtn" to="." method="_on_SwitchTurnBtn_pressed"]
